# RelayServe

./: CONTRIBUTING.md  README.md  config.yaml  pyproject.toml
RelayServe/: README.md  config.yaml
RelayServe/relayserve/internal/profile/: probe.py
RelayServe/relayserve/internal/server/: app.py  http_server.py
cmd/relay/: main.py
docs/: main.md
examples/: streaming_chat.py
relay/: __main__.py  cli.py
relay/internal/config/: settings.py
relay/internal/device/: registry.py
relay/internal/profile/: probe.py
relay/internal/queue/: queue.py
relay/internal/runner/: runner.py
relay/internal/scheduler/: scheduler.py
relay/internal/server/: app.py  http_server.py
relay/internal/shard/: plan.py
relayserve/: __main__.py  cli.py
relayserve/internal/config/: settings.py
relayserve/internal/kv/: manager.py
relayserve/internal/metrics/: collector.py
relayserve/internal/runner/: runner.py
relayserve/internal/scheduler/: scheduler.py
relayserve/internal/server/: app.py  http_server.py
relayserve/internal/shard/: plan.py
scripts/: spawn_backends.py
